--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
                 <input type="text" id="messageInput" placeholder="Type a message" required />
                 <button type="submit">Send</button>
             </form>
+            <div id="online-peepo" class="online"></div>
         </div>
     </div>
     <script type="module" src="./js/js.js"></script> 
