--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/css.css"> 
 </head>
 <body>
+    <div id="ping">🔴 Connecting..</div>
     <div class="chat-container">
         <!-- Login / Username Entry -->
         <div id="login-container" class="login-container">
